[package]
name = "KC-Overlay"
version = "0.2.0"
edition = "2021"
authors = ["jafkc2"]
repository = "https://github.com/jafkc2/KC-Overlay"

[profile.release]
strip = true
lto = true

[dependencies]
iced = {version = "0.14.0-dev", features = ["tokio", "image"]}
reqwest = "0.12.12"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "e722c4ee4f80833ba0b1013cadd546ebc3f490ce" }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "e722c4ee4f80833ba0b1013cadd546ebc3f490ce" }
